fix: use layout spacing

--- a/packages/esm-ward-app/src/ward-patient-card/ward-patient-card.scss
+++ b/packages/esm-ward-app/src/ward-patient-card/ward-patient-card.scss
@@ -1,4 +1,4 @@
-@use '@carbon/styles/scss/spacing';
+@use '@carbon/layout';
 @use '@carbon/styles/scss/type';
 @use '@carbon/colors';
 @import '~@openmrs/esm-styleguide/src/vars';
@@ -10,7 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: spacing.$spacing-02;
+  gap: layout.$spacing-02;
   background-color: $ui-02;
 
   position: relative; // this allows positioning the button correctly
@@ -58,7 +58,7 @@
 
 .wardPatientCardRow {
   width: 100%;
-  padding: spacing.$spacing-04;
+  padding: layout.$spacing-04;
 }
 
 .wardPatientCardRow:empty {
@@ -108,9 +108,9 @@
   border-radius: 50%;
   color: $ui-02;
   background-color: $color-blue-60-2;
-  padding: spacing.$spacing-04;
-  width: spacing.$spacing-04;
-  height: spacing.$spacing-04;
+  padding: layout.$spacing-04;
+  width: layout.$spacing-04;
+  height: layout.$spacing-04;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -128,12 +128,12 @@
 }
 
 .movementIcon {
-  padding: spacing.$spacing-02;
+  padding: layout.$spacing-02;
   border-radius: 50%;
   fill: $ui-03;
   background-color: $color-blue-60-2;
-  margin-left: spacing.$spacing-03;
-  margin-right: spacing.$spacing-02;
+  margin-left: layout.$spacing-03;
+  margin-right: layout.$spacing-02;
 }
 
 .wardPatientAddress {
@@ -141,11 +141,11 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: spacing.$spacing-02;
+  gap: layout.$spacing-02;
 }
 
 .wardPatientObsLabel {
-  padding-right: spacing.$spacing-02;
+  padding-right: layout.$spacing-02;
 }
 
 .dotSeparatedChildren {
@@ -155,7 +155,7 @@
 
     &::before {
       content: '·';
-      padding: 0 spacing.$spacing-02;
+      padding: 0 layout.$spacing-02;
     }
   }
 }
